src/tests/snapshots/gitu__tests__new_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files                                                                |
 new-file                                                                       |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 82c33a6635b2a53f
