src/tests/snapshots/gitu__tests__non_utf8_diff.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   non_utf8.txt                                                        |
 @@ -1 +1 @@                                                                    |
 -File with valid UTF-8                                                         |
 \ No newline at end of file                                                    |
 +FileFile with invalid UTF-8: ��                                               |
                                                                                |
 Recent commits                                                                 |
 7c3d61a main add non_utf8.txt                                                  |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 28d5173e61d6b8e0
