src/tests/snapshots/gitu__tests__rebase_conflict.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Rebasing other-branch onto main                                                |
                                                                                |
 Unstaged changes (1)                                                           |
 unmerged   new-file                                                            |
                                                                                |
 Staged changes (1)                                                             |
 unmerged   new-file                                                            |
                                                                                |
 Recent commits                                                                 |
 ed5ed59 main modify new-file                                                   |
 46c81ca add new-file                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: c444654cc76064bb
