src/tests/snapshots/gitu__tests__revert_abort.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 7294ba4 main modify new-file                                                   |
 57409cb add new-file                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git revert --abort                                                            |
styles_hash: db452f9023d7def7
