src/tests/snapshots/gitu__tests__revert_conflict.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌Reverting 57409cb                                                              |
                                                                                |
 Unstaged changes (1)                                                           |
 unmerged   new-file                                                            |
                                                                                |
 Staged changes (1)                                                             |
 unmerged   new-file                                                            |
                                                                                |
 Recent commits                                                                 |
 7294ba4 main modify new-file                                    Author Name __ |
 57409cb add new-file                                            Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 10ac5ca57578e4aa
