src/tests/snapshots/gitu__tests__stage_last_hunk_of_first_delta.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   file-two…                                                           |
                                                                                |
 Staged changes (1)                                                             |
 modified   file-one                                                            |
 @@ -1,2 +1 @@                                                                  |
 -asdf                                                                          |
  blahonga                                                                      |
                                                                                |
 Recent commits                                                                 |
 e45938a main add file-two                                                      |
 b3cf8e8 add file-one                                                           |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached                                                            |
styles_hash: 8fa3e4a0eaebe2d7
