src/tests/snapshots/gitu__tests__stash_list_with_limit.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: thirdstash                                                    |
 stash@1 On main: secondstash                                                   |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: bcabb39ea1794a9a
