src/tests/snapshots/gitu__tests__syntax_highlighted.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   syntax-highlighted.rs                                               |
▌@@ -1,3 +1,3 @@                                                                |
▌ fn main() {                                                                   |
▌-    println!("Hey");                                                          |
▌+    println!("Bye");                                                          |
▌ }                                                                             |
                                                                                |
 Recent commits                                                                 |
 5d25264 main add syntax-highlighted.rs                                         |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: f2260888cc1a087
